[gd_scene load_steps=10 format=2]

[ext_resource path="res://graphics/interface/foods icon.png" type="Texture" id=1]
[ext_resource path="res://graphics/interface/idle icon.png" type="Texture" id=2]
[ext_resource path="res://graphics/interface/materials icon.png" type="Texture" id=3]
[ext_resource path="res://graphics/interface/metals icon.png" type="Texture" id=4]
[ext_resource path="res://graphics/interface/crystals icon.png" type="Texture" id=5]
[ext_resource path="res://graphics/interface/workers icon.png" type="Texture" id=6]
[ext_resource path="res://graphics/interface/population icon.png" type="Texture" id=7]
[ext_resource path="res://scenes/gui/ActionPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/gui/UserInterface.gd" type="Script" id=9]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="UnitCommandPanel" type="Panel" parent="."]
margin_left = 467.482
margin_top = 812.5
margin_right = 1279.48
margin_bottom = 1049.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UnitCommandPanel"]
position = Vector2( -467.482, -812.5 )

[node name="TextureRect" type="TextureRect" parent="UnitCommandPanel/Sprite"]
margin_left = 460.0
margin_top = 802.0
margin_right = 650.0
margin_bottom = 1047.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionPanel" parent="." instance=ExtResource( 8 )]
margin_top = 831.0

[node name="Panel" type="Panel" parent="."]
margin_left = 1352.25
margin_top = 680.003
margin_right = 1678.25
margin_bottom = 1052.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pop num" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = -22.284
margin_top = -16.596
margin_right = 17.952
margin_bottom = 11.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="material num" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = -4.284
margin_top = 62.404
margin_right = 17.952
margin_bottom = 90.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worker num" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = 156.974
margin_top = 63.1531
margin_right = 165.21
margin_bottom = 91.2491
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worker num2" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = 156.974
margin_top = 124.584
margin_right = 165.21
margin_bottom = 152.68
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worker num3" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = 156.974
margin_top = 189.011
margin_right = 165.21
margin_bottom = 217.107
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worker num4" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = 156.974
margin_top = 249.692
margin_right = 165.21
margin_bottom = 277.788
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crystal num" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = -6.53156
margin_top = 127.58
margin_right = 15.7044
margin_bottom = 155.676
__meta__ = {
"_edit_use_anchors_": false
}

[node name="metal num" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = -6.53156
margin_top = 189.011
margin_right = 15.7044
margin_bottom = 217.107
__meta__ = {
"_edit_use_anchors_": false
}

[node name="food num2" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = -6.53156
margin_top = 251.94
margin_right = 15.7044
margin_bottom = 280.036
__meta__ = {
"_edit_use_anchors_": false
}

[node name="idle num" type="TextEdit" parent="Panel"]
anchor_left = 0.234
anchor_top = 0.093
anchor_right = 0.448
anchor_bottom = 0.125
margin_left = 156.716
margin_top = -12.596
margin_right = 174.952
margin_bottom = 15.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="foods icon" type="Sprite" parent="Panel"]
position = Vector2( 32.5138, 305.401 )
scale = Vector2( 0.386642, 0.386642 )
texture = ExtResource( 1 )

[node name="metals icon" type="Sprite" parent="Panel"]
position = Vector2( 28.2118, 238.722 )
scale = Vector2( 0.386642, 0.386642 )
texture = ExtResource( 4 )

[node name="crystals icon" type="Sprite" parent="Panel"]
position = Vector2( 31.4381, 175.268 )
scale = Vector2( 0.386642, 0.386642 )
texture = ExtResource( 5 )

[node name="population icon" type="Sprite" parent="Panel"]
position = Vector2( 30.9006, 32.7671 )
scale = Vector2( 0.386642, 0.386642 )
texture = ExtResource( 7 )

[node name="idle icon" type="Sprite" parent="Panel"]
position = Vector2( 204.59, 37.6068 )
scale = Vector2( 0.386642, 0.386642 )
texture = ExtResource( 2 )

[node name="materials icon" type="Sprite" parent="Panel"]
position = Vector2( 35.7397, 111.815 )
scale = Vector2( 0.386642, 0.386642 )
texture = ExtResource( 3 )

[node name="workers icon" type="Sprite" parent="Panel"]
position = Vector2( 203.358, 112.478 )
scale = Vector2( 0.408871, 0.408871 )
texture = ExtResource( 6 )

[node name="workers icon2" type="Sprite" parent="Panel"]
position = Vector2( 203.358, 173.908 )
scale = Vector2( 0.408871, 0.408871 )
texture = ExtResource( 6 )

[node name="workers icon3" type="Sprite" parent="Panel"]
position = Vector2( 203.358, 241.332 )
scale = Vector2( 0.408871, 0.408871 )
texture = ExtResource( 6 )

[node name="workers icon4" type="Sprite" parent="Panel"]
position = Vector2( 203.358, 305.759 )
scale = Vector2( 0.408871, 0.408871 )
texture = ExtResource( 6 )
